--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    implementation 'junit:junit:4.12'
     def nav_version = "2.3.5"
 
     // Android Jetpack Navigation
