State saving during authentication

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,6 @@ android {
 }
 
 dependencies {
-    implementation 'junit:junit:4.12'
     def nav_version = "2.3.5"
 
     // Android Jetpack Navigation
@@ -45,7 +44,12 @@ dependencies {
     // Для встроенных иконок
     implementation 'com.google.android.material:material:1.9.0'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
+
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.7'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
