--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".SessionsActivity"
+            android:name=".sessions.SessionsActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
