--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".sessions.UnpaidSessionsActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".CarsActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
