--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,30 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id "com.google.protobuf" version "0.9.3"
 }
+
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.17.3'
+    }
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.39.0'
+        }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                java { }
+            }
+            task.plugins {
+                grpc { }
+            }
+        }
+    }
+}
+
 
 android {
     compileSdk 33
@@ -57,6 +80,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    //gRPC
+    implementation 'io.grpc:grpc-okhttp:1.39.0'
+    implementation 'io.grpc:grpc-protobuf-lite:1.45.1'
+    implementation 'io.grpc:grpc-stub:1.45.1'
+
+    // Default
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.7'
     implementation 'androidx.appcompat:appcompat:1.6.1'
