--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ plugins {
 
 protobuf {
     protoc {
-        artifact = 'com.google.protobuf:protoc:3.17.3'
+        artifact = 'com.google.protobuf:protoc:3.19.3'
     }
     plugins {
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.39.0'
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.45.1'
         }
     }
     generateProtoTasks {
@@ -81,9 +81,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //gRPC
-    implementation 'io.grpc:grpc-okhttp:1.39.0'
-    implementation 'io.grpc:grpc-protobuf-lite:1.45.1'
+    implementation 'io.grpc:grpc-okhttp:1.45.1'
+    implementation 'io.grpc:grpc-protobuf:1.45.1'
     implementation 'io.grpc:grpc-stub:1.45.1'
+    implementation 'com.google.protobuf:protobuf-java:3.19.3'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
     // Default
     implementation 'androidx.core:core-ktx:1.10.1'
